# subMerge

./: LICENSE  README.md
Web Command Generate/: index.html  script.js  style.css
cpp/: .gitignore  CMakeLists.txt  main.cpp
python/: main.py
